--- a/pom.xml
+++ b/pom.xml
@@ -1,24 +1,29 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-      xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-      <modelVersion>4.0.0</modelVersion>
-     
-      <groupId>network</groupId>
-      <artifactId>jSkyNet</artifactId>
-      <version>0.0.1</version>
-      <packaging>jar</packaging>
-     
-	 <dependencies>
-        <dependency>
-          <groupId>junit</groupId>
-          <artifactId>junit</artifactId>
-          <version>4.8.2</version>
-          <scope>test</scope>
-        </dependency>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+
+	<groupId>net.sky</groupId>
+	<artifactId>jSkyNet</artifactId>
+	<version>0.0.1</version>
+	<packaging>jar</packaging>
+
+	<build>
+		<sourceDirectory>src/net/sky</sourceDirectory>
+		<testSourceDirectory>src/test/net/sky</testSourceDirectory>
+	</build>
+
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.8.2</version>
+			<scope>test</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-all</artifactId>
 			<version>1.10.19</version>
 			<scope>test</scope>
 		</dependency>
-      </dependencies>
+	</dependencies>
 </project>
